# jackbutler

./: CLAUDE.md  TODO.md  dev.sh  pyproject.toml
src/jackbutler/: app.py
src/jackbutler/analysis/: base.py  chord_analyzer.py  commentary.py  engine.py  key_analyzer.py  models.py  roman_numeral.py
src/jackbutler/parsing/: gp_parser.py  models.py  pitch.py
src/jackbutler/static/: app.js  index.html  style.css
src/jackbutler/web/: routes.py  schemas.py
tests/: conftest.py  test_accidentals.py  test_chord_analyzer.py  test_chord_name_validation.py  test_commentary.py  test_engine.py  test_gp_parser.py  test_interval_names.py  test_key_analyzer.py  test_pitch.py  test_roman_numeral.py  test_routes.py  test_tears.py
